init novnc project

--- a/vnc.html
+++ b/vnc.html
@@ -13,7 +13,7 @@
     or the fragment:
         http://example.com/#host=HOST&port=PORT&encrypt=1
     -->
-    <title>noVNC</title>
+    <title>CyberYami</title>
 
     <link rel="icon" type="image/x-icon" href="app/images/icons/novnc.ico">
     <meta name="theme-color" content="#313131">
@@ -102,7 +102,7 @@
 
     <div id="noVNC_fallback_error" class="noVNC_center">
         <div>
-            <div>noVNC encountered an error:</div>
+            <div>cyberYami encountered an error:</div>
             <br>
             <div id="noVNC_fallback_errormsg"></div>
         </div>
@@ -116,7 +116,7 @@
 
             <div class="noVNC_scroll">
 
-            <h1 class="noVNC_logo" translate="no"><span>no</span><br>VNC</h1>
+            <h1 class="noVNC_logo" translate="no"><span>cyber</span><br>YAMI</h1>
 
             <hr>
 
@@ -311,10 +311,10 @@
     <!-- Connect button -->
     <div class="noVNC_center">
         <div id="noVNC_connect_dlg">
-            <p class="noVNC_logo" translate="no"><span>no</span>VNC</p>
+            <p class="noVNC_logo" translate="no"><span>cyber</span>YAMI</p>
             <div>
                 <button id="noVNC_connect_button">
-                    <img alt="" src="app/images/connect.svg"> Connect
+                    <img alt="" src="app/images/connect.svg"> Connect Machine
                 </button>
             </div>
         </div>
